Prevent zooming on ios when searching

--- a/assets/themes/coredna/static/sass/default.scss
+++ b/assets/themes/coredna/static/sass/default.scss
@@ -280,6 +280,10 @@ div#breadcrumbs {
 			display: none;
 		}
 	}
+	.wy-side-nav-search  {
+		input[type=text] {
+			font-size: 16px;
+		}
 	div#breadcrumbs {
 		display:none;
 	}
